# devtok

./: .gitignore  Cargo.toml  MISSION.md  Makefile  README.md  start.sh
Formula/: acs.rb
coverage/: coverage.json
design-log/: 001-self-development-loop.md  001-synapse-architecture.md  002-acs-health-command.md  003-log-follow-color-filters.md  004-export-project-summary.md  005-run-autoscaling-workers.md  006-t-062-tb2-db2-backend-kb.md  007-t-066-ci-self-healing.md
frontend/: index.html  package-lock.json  package.json
orchestrator/: mcp.template.json  pyproject.toml
orchestrator/synapse_os/: bootstrap.py  brain.py  cli.py  config.py  cron_engine.py  daemon.py  feedback_watcher.py  health_checker.py  models.py  process_manager.py  registry.py  runner.py  spacetimedb_client.py  spawner.py  stdout_router.py
orchestrator/synapse_os/prompts/: bootstrap.py  manager.py  worker.py
orchestrator/synapse_os/tools/: cli_bridge.py  communication_tools.py  knowledge_tools.py  server.py  ticket_tools.py
orchestrator/tests/: conftest.py  test_bootstrap.py  test_brain.py  test_cli.py  test_communication_tools.py  test_config.py  test_cron_engine.py  test_daemon.py  test_e2e_phase2.py  test_feedback_watcher.py  test_health_checker.py  test_integration.py  test_knowledge_tools.py  test_models.py  test_process_manager.py  test_prompts.py  test_registry.py  test_runner.py  test_spacetimedb_client.py  test_spawner.py  test_stdout_router.py  test_ticket_tools.py
scripts/: generate-homebrew-formula.sh  install.sh  package-release.sh
src/: config.rs  db.rs  lib.rs  main.rs  manager.rs  models.rs  prompts.rs  provider_registry.rs  quality.rs  release.rs  spawner.rs  worker.rs
tests/: cli_test.rs  config_test.rs  db_extra_test.rs  db_test.rs  dedup_test.rs  e2e_test.rs  (+9 more)
(+98 files in other folders)
