[package]
name = "acs"
version = "0.1.0"
edition = "2021"
description = "Auto Consulting Service CLI"
repository = "https://github.com/themohitkhare/devtok"
homepage = "https://github.com/themohitkhare/devtok"
readme = "README.md"
keywords = ["cli", "automation", "ai", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rand = "0.9"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
colored = "3.1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
semver = "1"

[dev-dependencies]
