[project]
name = "synapse-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.21.0",
    "lupa>=2.0",
]

[project.scripts]
synapse-os = "synapse_os.daemon:main"
